// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceConnectPortEntryTest renders renderedDescription 1`] = `
<span
  className="portNumberFieldDescription"
>
  The port number must be between 0 and 65535.
</span>
`;

exports[`DeviceConnectPortEntryTest renders with "Connected" 1`] = `
<div
  className="deviceConnectPortEntry"
>
  <label
    className="portNumberLabel"
    htmlFor="port-number-text-field-id"
  >
    Android device port number
  </label>
  <div
    className="deviceConnectPortEntryBody"
  >
    <MaskedTextField
      className="portNumberField"
      data-automation-id="device-connect-port-number-field"
      id="port-number-text-field-id"
      mask="99999"
      maskChar=""
      maskFormat={
        Object {
          "*": /\\[a-zA-Z0-9\\]/,
          "9": /\\[0-9\\]/,
          "a": /\\[a-zA-Z\\]/,
        }
      }
      onChange={[Function]}
      onKeyDown={[Function]}
      onRenderDescription={[Function]}
      placeholder="Ex: 12345"
    />
    <CustomizedDefaultButton
      data-automation-id="device-connect-validate-port-button"
      disabled={true}
      onClick={[Function]}
    >
      Validate port number
    </CustomizedDefaultButton>
  </div>
</div>
`;

exports[`DeviceConnectPortEntryTest renders with "Connected" and some text in the port text field 1`] = `
<div
  className="deviceConnectPortEntry"
>
  <label
    className="portNumberLabel"
    htmlFor="port-number-text-field-id"
  >
    Android device port number
  </label>
  <div
    className="deviceConnectPortEntryBody"
  >
    <MaskedTextField
      className="portNumberField"
      data-automation-id="device-connect-port-number-field"
      id="port-number-text-field-id"
      mask="99999"
      maskChar=""
      maskFormat={
        Object {
          "*": /\\[a-zA-Z0-9\\]/,
          "9": /\\[0-9\\]/,
          "a": /\\[a-zA-Z\\]/,
        }
      }
      onChange={[Function]}
      onKeyDown={[Function]}
      onRenderDescription={[Function]}
      placeholder="Ex: 12345"
    />
    <CustomizedDefaultButton
      data-automation-id="device-connect-validate-port-button"
      disabled={false}
      onClick={[Function]}
    >
      Validate port number
    </CustomizedDefaultButton>
  </div>
</div>
`;

exports[`DeviceConnectPortEntryTest renders with "Connecting" 1`] = `
<div
  className="deviceConnectPortEntry"
>
  <label
    className="portNumberLabel"
    htmlFor="port-number-text-field-id"
  >
    Android device port number
  </label>
  <div
    className="deviceConnectPortEntryBody"
  >
    <MaskedTextField
      className="portNumberField"
      data-automation-id="device-connect-port-number-field"
      id="port-number-text-field-id"
      mask="99999"
      maskChar=""
      maskFormat={
        Object {
          "*": /\\[a-zA-Z0-9\\]/,
          "9": /\\[0-9\\]/,
          "a": /\\[a-zA-Z\\]/,
        }
      }
      onChange={[Function]}
      onKeyDown={[Function]}
      onRenderDescription={[Function]}
      placeholder="Ex: 12345"
    />
    <CustomizedPrimaryButton
      data-automation-id="device-connect-validate-port-button"
      disabled={true}
      onClick={[Function]}
    >
      Validate port number
    </CustomizedPrimaryButton>
  </div>
</div>
`;

exports[`DeviceConnectPortEntryTest renders with "Connecting" and some text in the port text field 1`] = `
<div
  className="deviceConnectPortEntry"
>
  <label
    className="portNumberLabel"
    htmlFor="port-number-text-field-id"
  >
    Android device port number
  </label>
  <div
    className="deviceConnectPortEntryBody"
  >
    <MaskedTextField
      className="portNumberField"
      data-automation-id="device-connect-port-number-field"
      id="port-number-text-field-id"
      mask="99999"
      maskChar=""
      maskFormat={
        Object {
          "*": /\\[a-zA-Z0-9\\]/,
          "9": /\\[0-9\\]/,
          "a": /\\[a-zA-Z\\]/,
        }
      }
      onChange={[Function]}
      onKeyDown={[Function]}
      onRenderDescription={[Function]}
      placeholder="Ex: 12345"
    />
    <CustomizedPrimaryButton
      data-automation-id="device-connect-validate-port-button"
      disabled={true}
      onClick={[Function]}
    >
      Validate port number
    </CustomizedPrimaryButton>
  </div>
</div>
`;

exports[`DeviceConnectPortEntryTest renders with "Default" 1`] = `
<div
  className="deviceConnectPortEntry"
>
  <label
    className="portNumberLabel"
    htmlFor="port-number-text-field-id"
  >
    Android device port number
  </label>
  <div
    className="deviceConnectPortEntryBody"
  >
    <MaskedTextField
      className="portNumberField"
      data-automation-id="device-connect-port-number-field"
      id="port-number-text-field-id"
      mask="99999"
      maskChar=""
      maskFormat={
        Object {
          "*": /\\[a-zA-Z0-9\\]/,
          "9": /\\[0-9\\]/,
          "a": /\\[a-zA-Z\\]/,
        }
      }
      onChange={[Function]}
      onKeyDown={[Function]}
      onRenderDescription={[Function]}
      placeholder="Ex: 12345"
    />
    <CustomizedPrimaryButton
      data-automation-id="device-connect-validate-port-button"
      disabled={true}
      onClick={[Function]}
    >
      Validate port number
    </CustomizedPrimaryButton>
  </div>
</div>
`;

exports[`DeviceConnectPortEntryTest renders with "Default" and some text in the port text field 1`] = `
<div
  className="deviceConnectPortEntry"
>
  <label
    className="portNumberLabel"
    htmlFor="port-number-text-field-id"
  >
    Android device port number
  </label>
  <div
    className="deviceConnectPortEntryBody"
  >
    <MaskedTextField
      className="portNumberField"
      data-automation-id="device-connect-port-number-field"
      id="port-number-text-field-id"
      mask="99999"
      maskChar=""
      maskFormat={
        Object {
          "*": /\\[a-zA-Z0-9\\]/,
          "9": /\\[0-9\\]/,
          "a": /\\[a-zA-Z\\]/,
        }
      }
      onChange={[Function]}
      onKeyDown={[Function]}
      onRenderDescription={[Function]}
      placeholder="Ex: 12345"
    />
    <CustomizedPrimaryButton
      data-automation-id="device-connect-validate-port-button"
      disabled={false}
      onClick={[Function]}
    >
      Validate port number
    </CustomizedPrimaryButton>
  </div>
</div>
`;

exports[`DeviceConnectPortEntryTest renders with "Error" 1`] = `
<div
  className="deviceConnectPortEntry"
>
  <label
    className="portNumberLabel"
    htmlFor="port-number-text-field-id"
  >
    Android device port number
  </label>
  <div
    className="deviceConnectPortEntryBody"
  >
    <MaskedTextField
      className="portNumberField"
      data-automation-id="device-connect-port-number-field"
      id="port-number-text-field-id"
      mask="99999"
      maskChar=""
      maskFormat={
        Object {
          "*": /\\[a-zA-Z0-9\\]/,
          "9": /\\[0-9\\]/,
          "a": /\\[a-zA-Z\\]/,
        }
      }
      onChange={[Function]}
      onKeyDown={[Function]}
      onRenderDescription={[Function]}
      placeholder="Ex: 12345"
    />
    <CustomizedPrimaryButton
      data-automation-id="device-connect-validate-port-button"
      disabled={true}
      onClick={[Function]}
    >
      Validate port number
    </CustomizedPrimaryButton>
  </div>
</div>
`;

exports[`DeviceConnectPortEntryTest renders with "Error" and some text in the port text field 1`] = `
<div
  className="deviceConnectPortEntry"
>
  <label
    className="portNumberLabel"
    htmlFor="port-number-text-field-id"
  >
    Android device port number
  </label>
  <div
    className="deviceConnectPortEntryBody"
  >
    <MaskedTextField
      className="portNumberField"
      data-automation-id="device-connect-port-number-field"
      id="port-number-text-field-id"
      mask="99999"
      maskChar=""
      maskFormat={
        Object {
          "*": /\\[a-zA-Z0-9\\]/,
          "9": /\\[0-9\\]/,
          "a": /\\[a-zA-Z\\]/,
        }
      }
      onChange={[Function]}
      onKeyDown={[Function]}
      onRenderDescription={[Function]}
      placeholder="Ex: 12345"
    />
    <CustomizedPrimaryButton
      data-automation-id="device-connect-validate-port-button"
      disabled={false}
      onClick={[Function]}
    >
      Validate port number
    </CustomizedPrimaryButton>
  </div>
</div>
`;

exports[`DeviceConnectPortEntryTest user interaction change port number handles port text = "": after 1`] = `
Object {
  "port": "",
}
`;

exports[`DeviceConnectPortEntryTest user interaction change port number handles port text = "": before 1`] = `
Object {
  "port": "",
}
`;

exports[`DeviceConnectPortEntryTest user interaction change port number handles port text = "111": after 1`] = `
Object {
  "port": "111",
}
`;

exports[`DeviceConnectPortEntryTest user interaction change port number handles port text = "111": before 1`] = `
Object {
  "port": "",
}
`;

exports[`DeviceConnectPortEntryTest user interaction change port number handles port text = "null": after 1`] = `
Object {
  "port": null,
}
`;

exports[`DeviceConnectPortEntryTest user interaction change port number handles port text = "null": before 1`] = `
Object {
  "port": "",
}
`;
